--- a/.github/workflows/spotbugs.yml
+++ b/.github/workflows/spotbugs.yml
@@ -19,8 +19,13 @@ jobs:
           java-version: '20'
           cache: 'gradle'
 
-      - name: Main Spotbugs
-        run: ./gradlew spotbugsMain
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
+        with:
+          gradle-version: 8.7
 
-      - name: Test Spotbugs
-        run: ./gradlew spotbugsTest
+      - name: Main Spotbugs with Gradle Wrapper
+        run: gradle spotbugsMain
+
+      - name: Test Spotbugs with Gradle Wrapper
+        run: gradle spotbugsTest
