--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,5 +26,10 @@ jobs:
           java-version: ${{ matrix.java-version }}
           cache: 'gradle'
 
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
+        with:
+          gradle-version: 8.7
+
       - name: Run tests with gradle wrapper
-        run: ./gradlew test
+        run: gradle test
