--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,5 +19,10 @@ jobs:
           java-version: '20'
           cache: 'gradle'
 
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
+        with:
+          gradle-version: 8.7
+
       - name: Test Gradle Build
-        run: ./gradlew build --dry-run
+        run: gradle build --dry-run
