--- a/.github/workflows/codestyle.yml
+++ b/.github/workflows/codestyle.yml
@@ -19,5 +19,10 @@ jobs:
           java-version: '20'
           cache: 'gradle'
 
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
+        with:
+          gradle-version: 8.7
+
       - name: Check code style
-        run: ./gradlew spotlessCheck
+        run: gradle spotlessCheck
