--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,13 +16,13 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
-          java-version: '20'
+          java-version: '21'
           cache: 'gradle'
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
         with:
-          gradle-version: 8.6
+          gradle-version: 8.7
 
       - name: Test Gradle Build
-        run: ./gradlew build --dry-run
+        run: gradle build --dry-run
