--- a/.github/workflows/codestyle.yml
+++ b/.github/workflows/codestyle.yml
@@ -16,13 +16,13 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
-          java-version: '20'
+          java-version: '21'
           cache: 'gradle'
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
         with:
-          gradle-version: 8.6
+          gradle-version: 8.7
 
-      - name: Check codestyle with Gradle Wrapper
-        run: ./gradlew spotlessCheck
+      - name: Check code style
+        run: gradle spotlessCheck
